# faker-procurex

./: README.md  pyproject.toml  setup.py
faker_procurex/: __init__.py
faker_procurex/providers/citydata/zh_CN/: random_city.py
faker_procurex/providers/trade_name/zh_CN/: __init__.py  random_city.py  read_data.py
faker_procurex/service/readate/: __init__.py  jsondate.py
tests/: test_readename.py
